[gd_scene load_steps=56 format=2]

[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_004.png" type="Texture" id=1]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_003.png" type="Texture" id=2]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_005.png" type="Texture" id=3]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_001.png" type="Texture" id=4]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_002.png" type="Texture" id=5]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_006.png" type="Texture" id=6]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_007.png" type="Texture" id=7]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_005.png" type="Texture" id=8]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_002.png" type="Texture" id=9]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_003.png" type="Texture" id=10]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_007.png" type="Texture" id=11]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_001.png" type="Texture" id=12]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_006.png" type="Texture" id=13]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_007.png" type="Texture" id=14]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_002.png" type="Texture" id=15]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_000.png" type="Texture" id=16]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_005.png" type="Texture" id=17]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_004.png" type="Texture" id=18]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_000.png" type="Texture" id=19]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_000.png" type="Texture" id=20]
[ext_resource path="res://assets/Bat/03-Attack/__Bat02_Attack_006.png" type="Texture" id=21]
[ext_resource path="res://assets/Bat/05-Die/__Bat02_Die_003.png" type="Texture" id=22]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_001.png" type="Texture" id=23]
[ext_resource path="res://assets/Bat/04-Hurt/FadeFX/__Bat02_Hurt_004.png" type="Texture" id=24]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_000.png" type="Texture" id=25]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_001.png" type="Texture" id=26]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_003.png" type="Texture" id=27]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_004.png" type="Texture" id=28]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_005.png" type="Texture" id=29]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_002.png" type="Texture" id=30]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_007.png" type="Texture" id=31]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_008.png" type="Texture" id=32]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_009.png" type="Texture" id=33]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_010.png" type="Texture" id=34]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_006.png" type="Texture" id=35]
[ext_resource path="res://assets/Bat/01-Idle/__Bat02_Idle_011.png" type="Texture" id=36]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_006.png" type="Texture" id=37]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_007.png" type="Texture" id=38]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_000.png" type="Texture" id=39]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_001.png" type="Texture" id=40]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_002.png" type="Texture" id=41]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_004.png" type="Texture" id=42]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_003.png" type="Texture" id=43]
[ext_resource path="res://assets/Bat/02-Fly/__Bat02_Fly_005.png" type="Texture" id=44]
[ext_resource path="res://Bat/FlyingCharakter.gd" type="Script" id=45]
[ext_resource path="res://assets/UI/Sound/click_sound_1.wav" type="AudioStream" id=46]
[ext_resource path="res://assets/Schriften/ZeroKey.png" type="Texture" id=47]
[ext_resource path="res://assets/Schriften/FinnishedGame.png" type="Texture" id=48]
[ext_resource path="res://assets/Schriften/YouGainedAKey.png" type="Texture" id=49]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 11 ) ],
"loop": false,
"name": "Attak",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 23 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.5717

[sub_resource type="CircleShape2D" id=3]
radius = 18.2193

[sub_resource type="RayShape2D" id=4]
length = 18.6888

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.360784, 0.733333, 0.0235294, 1 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "ZeroKey",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Standart",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "FinnishedGame",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "GainedKey",
"speed": 5.0
} ]

[node name="FlyingCharakter" type="RigidBody2D"]
mode = 2
script = ExtResource( 45 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.833029, 1.36032 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "Fly"
frame = 2
speed_scale = 3.0
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0093174, -0.0110978 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -1.00932, -0.0150979 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 0.990683, -0.0150979 )
shape = SubResource( 4 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -40.0
margin_top = -38.5
margin_right = 41.0
margin_bottom = -31.5
custom_styles/fg = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.968627, 0.129412, 0.129412, 1 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node2D" parent="."]

[node name="Click_Sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 46 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -120 )
z_index = 10
frames = SubResource( 6 )
animation = "Standart"
[connection signal="body_entered" from="." to="." method="_on_FlyingCharakter_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
